fixed perf thumbnail spacing

--- a/app/assets/stylesheets/performances.css.scss
+++ b/app/assets/stylesheets/performances.css.scss
@@ -97,13 +97,12 @@
             font-size: 13px;
         }
         background-color: $sub-color;
-        padding: 0px;
+        padding-bottom: 5px;
         .edit-icons {
             height: 15px;
             position: relative;
             margin-top: -20px;
             z-index: 4;
-            top: -2px;
             text-align: right;
             img {
                 width: 15px;
